<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center"
    android:background="@drawable/bg_alertview"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center"
    android:background="@drawable/corner_border_transaparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"


            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/select_customer"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button

            android:visibility="gone"
            android:textColor="@color/white"
            android:id="@+id/btn_customer"
            android:background="@color/colorPrimary"
            android:text="@string/select_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:padding="4dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"

            android:id="@+id/edt_asset_name"
            android:hint="@string/asset_name"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:padding="4dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

        android:textStyle="bold"
        android:text="@string/warranty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/rgrp_warranty"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbtn_warranty_yes"
                android:text="@string/yes"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rbtn_warranty_no"
                android:text="@string/no"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/til_Warranty_duration"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="number"

                android:id="@+id/edt_warranty_duration"
                android:hint="@string/duration"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:id="@+id/edt_model"
                android:hint="@string/model"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:id="@+id/edt_serial"
                android:hint="@string/serial_no"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:id="@+id/edt_manufacturer"
                android:hint="@string/manufacturer"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"

                android:focusableInTouchMode="false"
                android:id="@+id/edt_manufacture_yr"
                android:hint="@string/year_of_manufacture"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:padding="4dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:id="@+id/edt_contact"
            android:hint="@string/servce_contract"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>
</LinearLayout>
</ScrollView>