<?xml version="1.0" encoding="utf-8"?><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:orientation="vertical"--><!--android:padding="12dp"--><!--android:gravity="center"--><!--android:background="@color/white"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_alertview"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/corner_border_transaparent"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_contact_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_person"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Position"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Department"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_room_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Room Size"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Does the room met required specifications ?"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgrp_specifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rbtn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/explain"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="2dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/accessories"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="Add" />
        </LinearLayout>

        <ListView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp">

        </ListView>


    </LinearLayout>


</LinearLayout><!--</ScrollView>-->