<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center"
    android:background="@drawable/bg_alertview"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center"
    android:background="@drawable/corner_border_transaparent"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:minLines="2"
                android:id="@+id/edt_engineer_remarks"
                android:hint="@string/engineer_s_remarks"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="2"
            android:id="@+id/edt_customer_remarks"
            android:hint="@string/customers_s_remarks"
            android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:focusableInTouchMode="false"
                android:id="@+id/edt_installation_date"
                android:hint="Date of Installation"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:visibility="gone" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:text="@string/trainees"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:background="@color/colorAccent"
            android:text="Add"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/recyclerView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp">

    </ListView>

</LinearLayout>
</ScrollView>